<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">


    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_view"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view"
        android:columnCount="1"
        android:rowCount="3"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-80dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="300dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_location_note"
                    android:textSize="18dp"
                    />

                <EditText
                    android:id="@+id/textAddress"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:hint="@string/egyptian_or_english_only"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/desttinationNearBy"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="75dp"
                    android:background="@drawable/btn1"
                    android:onClick="nearByMe2"
                    android:text="@string/find_a_station"
                    android:textColor="@color/white" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/desStation"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:visibility="gone"
            >

            <LinearLayout
                android:id="@+id/nearByMe1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:gravity="center"

                >
                <TextView
                    android:id="@+id/foundStation"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:gravity="center"

                    />
                <Button
                    android:id="@+id/viewLocation"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="VIEW DIRECTIONS TO THIS STATION"
                    android:background="@drawable/btn1"
                              />



            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/type_a_location_to_find_a_nearby_station"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        />

</RelativeLayout>