<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">


    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bg_view"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view"
        android:columnCount="1"
        android:rowCount="4"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="-80dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/viewTheLine"
            android:layout_width="150dp"
            android:layout_height="400dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:visibility="visible"
            >

            <LinearLayout
                android:id="@+id/nearByMe1111"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:gravity="center"

                >


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:apiKey="AIzaSyDLlZ5zIWvoumSyKTAuEi97gKXU6_JgpPs"
                    android:name="com.google.android.gms.maps.SupportMapFragment"

                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:visibility="visible"
            >

            <LinearLayout
                android:id="@+id/nearByMe4.5.6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:gravity="center"
                >
<TextView
    android:id="@+id/addView"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/your_location_is"
    android:textSize="18sp"
    android:textStyle="bold"
    android:gravity="center"
    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:visibility="visible"
            >

            <LinearLayout
                android:id="@+id/buttonCustom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnLocal"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/nearest_station_toyou"
                    android:background="@drawable/btn1"
                    >
                </Button>



            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/routeCard"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:visibility="gone"
            >

            <LinearLayout
                android:id="@+id/buttonOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/viewRouteBtn"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="OPEN THE DIRECTIONS ON GOOGLE MAPS"
                    android:background="@drawable/btn1"
                    android:layout_margin="20dp"
                    >
                </Button>
<!--                <Button-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:text="Nearest Station"-->
<!--                    android:background="@drawable/btn1"-->
<!--                    android:layout_margin="20dp"-->
<!--                    >-->
<!--                </Button>-->


            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/nearest_station_by"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        />



</RelativeLayout>

    </ScrollView>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>